Fixed overflow not the best but it

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -1,5 +1,5 @@
 * {
-	@apply outline-none;
+	@apply outline-none whitespace-normal break-words;
 	-webkit-tap-highlight-color: transparent;
 
 	::-webkit-scrollbar {
